# Agents

./: .agents-lint.toml  .gitignore  README.md  pyproject.toml
.github/workflows/: build-and-install.yml  lint-rule-pack.yml
agents/: build_agents.py  lint_agents.py
agents/agents_builder/: build_runner.py  cli.py  constants.py  content_loader.py  file_ops.py  frontmatter.py  guidance_renderer.py  target_assets.py
agents/agents_builder/targets/: __init__.py  base_target.py  claude_target.py  codex_target.py  copilot_target.py  gemini_target.py  opencode_target.py  source_target.py
agents/agents_linter/: __init__.py  cli.py  config.py  runner.py
agents/content/commands/: propose-global-guidance.md
agents/guidance/frameworks/django/: guidance.md
agents/guidance/frameworks/vue/: guidance.md
agents/guidance/project/: guidance.md
agents/rules/: README.md  __init__.py  catalog.toml
agents/rules/ast-grep/rules/: no-dynamic-attributes.yml  no-future-annotations.yml
agents/rules/ast-grep/tests/: AGPY001-test.yml  AGPY003-test.yml
agents/rules/config/: agents-lint.toml  eslint.config.mjs  prettier.config.mjs  ruff.toml
agents/rules/django_checks/: __init__.py  apps.py  checks.py  policy.py
agents/rules/eslint-plugin-agents/: index.js  package.json
agents/rules/python/: __init__.py  __main__.py  api.py  cli.py  runner.py
agents/rules/python/rules/: __init__.py  (+3 more)
agents/tools/opencode/: opencode.json
agents/workflows/: context_plan_build.py  guidance_review_loop.py
tests/: test_agents_linter.py  test_build_targets.py  test_python_rules.py
(+52 files in other folders)
