[project]
name = "agents"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
agents-lint = "agents.agents_linter.cli:main"

[tool.setuptools.package-data]
"agents.rules" = [
    "README.md",
    "catalog.toml",
    "config/*",
    "ast-grep/*.yml",
    "ast-grep/rules/*.yml",
    "ast-grep/tests/*.yml",
    "ast-grep/tests/__snapshots__/*.yml",
    "eslint-plugin-agents/*.js",
    "eslint-plugin-agents/*.json",
    "eslint-plugin-agents/rules/*.js",
    "eslint-plugin-agents/tests/*.js",
]
